[gd_scene load_steps=10 format=3 uid="uid://bh8a7coqatsbw"]

[ext_resource type="Texture2D" uid="uid://hqw1gklef1u7" path="res://assets/panel_pale.png" id="1_n2rff"]
[ext_resource type="Texture2D" uid="uid://c57qhxwfi52lv" path="res://assets/callout_blue.png" id="2_uid7n"]
[ext_resource type="Script" uid="uid://c2k2tme401slt" path="res://scripts/ui/scoring_panel.gd" id="3_g7vyd"]
[ext_resource type="Theme" uid="uid://dxx5m48t8ucyq" path="res://koi_koi_theme.tres" id="3_nvy13"]
[ext_resource type="Texture2D" uid="uid://lri4v48rg5ud" path="res://assets/button_tan.png" id="4_sjh5u"]
[ext_resource type="Texture2D" uid="uid://c5tvrxlapv37w" path="res://assets/button_red.png" id="5_g7vyd"]

[sub_resource type="Theme" id="Theme_s04ys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjh5u"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_nvy13"]

[node name="ScoringPanel" type="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -400.0
offset_right = 335.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_nvy13")
texture = ExtResource("1_n2rff")
region_rect = Rect2(0, 0, 475, 236)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
script = ExtResource("3_g7vyd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.25
offset_top = -50.0
offset_right = 134.25
offset_bottom = 73.5
grow_horizontal = 2
theme = SubResource("Theme_s04ys")
theme_override_styles/panel = SubResource("StyleBoxFlat_sjh5u")

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_uid7n")
patch_margin_left = 30
patch_margin_top = 60
patch_margin_right = 55
patch_margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_nvy13")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 57
text = "Koi Koi?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 45

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 80

[node name="KoiKoiButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture_normal = ExtResource("4_sjh5u")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/KoiKoiButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -10.5
offset_right = 24.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Koi Koi"

[node name="EndButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture_normal = ExtResource("5_g7vyd")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/EndButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "End"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 585.5
offset_right = 670.0
offset_bottom = 637.5
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nvy13")
theme_override_colors/font_color = Color(0.3529412, 0.73333335, 0.99607843, 1)
theme_override_font_sizes/font_size = 45
text = "Score:"

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_nvy13")
theme_override_colors/font_color = Color(0.3529412, 0.73333335, 0.99607843, 1)
theme_override_font_sizes/font_size = 45
text = "0 pts"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -285.0
offset_right = -25.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="YakuList" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/KoiKoiButton" to="." method="_on_koi_koi_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EndButton" to="." method="_on_end_button_pressed"]
